@@ -4,19 +4,11 @@
 \alias{summary.brmsfit}
 \title{Create a summary of a fitted model represented by a \code{brmsfit} object}
 \usage{
-\method{summary}{brmsfit}(object, waic = FALSE, loo = FALSE, R2 = FALSE,
-  priors = FALSE, prob = 0.95, mc_se = FALSE, use_cache = TRUE, ...)
+\method{summary}{brmsfit}(object, priors = FALSE, prob = 0.95,
+  mc_se = FALSE, use_cache = TRUE, ...)
 }
 \arguments{
 \item{object}{An object of class \code{brmsfit}}
-
-\item{waic, loo}{Logical; Indicating if the LOO or WAIC information
-criteria should be computed and shown in the summary. 
-Defaults to \code{FALSE}.}
-
-\item{R2}{Logical; Indicating if the Bayesian R-squared
-should be computed and shown in the summary. 
-Defaults to \code{FALSE}.}
 
 \item{priors}{Logical; Indicating if priors should be included 
 in the summary. Default is \code{FALSE}.}
